moved author position, and fixed text overflowing

--- a/src/app/main.css
+++ b/src/app/main.css
@@ -191,6 +191,17 @@ button {
 	border-radius: var(--spacing);
 }
 
+#browser .el .text {
+	overflow: hidden;
+}
+
+#browser .el .title, #browser .el .description {
+	height: 1.2em;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
+
 #browser .el .title {font-size: 1.2em}
 #browser .el .description {font-size: 0.8em}
 #browser .el button {
